--- a/styles/layouts/index.css
+++ b/styles/layouts/index.css
@@ -1,6 +1,6 @@
 .index-page-container{
     position: relative;
-    margin-bottom: 1em;
+    /* margin-bottom: 1em; */
 }
 
 .index-top-container{
@@ -39,16 +39,37 @@
 }
 
 .columns-container{
+    border-bottom: var(--border-ultra-thin);
     columns: auto 3;
     gap: 0.75em;
-    padding: 0 1em;
+    padding: 0 1em 1em 1em;
+}
+
+.curated-link-container{
+    margin: 1em 0;
+    height: 40px;
+    width: 100%;
+}
+
+.curated-button{
+    border: var(--border-ultra-thin);
+    color: var(--main-text-color);
+    text-decoration: none;
+    padding: 0 10px;
+    height: 100%;
+    width: auto;
+}
+
+.curated-button:hover{
+    background-color: var(--highlight-color);
+    color: white;
 }
 
 @media only screen and (max-width: 896px) {
     .columns-container{
         columns: auto 2;
         gap: 10px;
-        padding: 0 10px;
+        padding: 0 10px 10px 10px;
     }
 
     .index-searchbox{
