Reworked Custom Image
Now it shows loading skeleton while image is being fetched

--- a/styles/layouts/en_layout.css
+++ b/styles/layouts/en_layout.css
@@ -58,8 +58,7 @@
     border: none;
 }
 
-.no-liked-photos{
-    border-bottom: var(--border-ultra-thin);
+.no-liked-photos,empty-search-text{
     min-height: 250px;
 }
 
