--- a/styles/animations/loading.css
+++ b/styles/animations/loading.css
@@ -17,16 +17,11 @@
     }
 }
 
-.loading-photo-container{
-    height: 700px;
+.image-loading-div{
+    height: 250px;
     max-width: 460px;
 }
 
 .index-loading-container{
     height: 2500px;
-}
-
-.pseudo-image{
-    height: 700px;
-    width: 100%;
 }
