--- a/styles/layouts/en_layout.css
+++ b/styles/layouts/en_layout.css
@@ -19,6 +19,7 @@
     border-bottom: var(--border-ultra-thin);
     columns: auto 3;
     gap: 0.75em;
+    padding: 0 1em;
     min-height: 700px;
 }
 
