--- a/styles/layouts/en_layout.css
+++ b/styles/layouts/en_layout.css
@@ -88,11 +88,28 @@ li{
     margin: 0.5em;
 }
 
+.remove-all-photos-conatiner{
+    width: 100%;
+}
+
+.remove-button{
+    background-color: white;
+    border: var(--border-ultra-thin);
+    padding: 0 1em;
+    height: 40px;
+    width: auto;
+}
+
+.remove-button:hover{
+    background-color: var(--highlight-color);
+    color: white;
+}
+
 @media only screen and (max-width: 896px) {
     .curated-photos-wrapper, .favourites-wrapper,.results-wrapper{
         columns: auto 2;
         gap: 10px;
-        padding: 0 10px 10px 10px;
+        padding: 10px;
     }
 
     .favourites-page{
