--- a/styles/components/toast.css
+++ b/styles/components/toast.css
@@ -1,6 +1,6 @@
 .my-toast{
     background-color: var(--grey-color);
-    border: none;
+    border: var(--border-thin);
     padding: 0 1em;
     height: 40px;
     width: auto;
