--- a/styles/layouts/en_layout.css
+++ b/styles/layouts/en_layout.css
@@ -1,3 +1,7 @@
+#en-layout{
+    height: 100%;
+}
+
 .global-navbar-wrapper{
     background-color: var(--primary-bg-color);
     border-bottom: var(--border-ultra-thin);
@@ -88,7 +92,7 @@ li{
     margin: 0.5em;
 }
 
-.remove-all-photos-conatiner{
+.remove-all-photos-container{
     width: 100%;
 }
 
