--- a/styles/layouts/en_layout.css
+++ b/styles/layouts/en_layout.css
@@ -48,7 +48,7 @@
     background-color: var(--highlight-color);
 }
 
-.curated-photos-wrapper, .favourites-wrapper{
+.favourites-wrapper{
     border-bottom: var(--border-ultra-thin);
     columns: auto 3;
     gap: 0.75em;
@@ -110,7 +110,7 @@ li{
 }
 
 @media only screen and (max-width: 896px) {
-    .curated-photos-wrapper, .favourites-wrapper,.results-wrapper{
+    .favourites-wrapper,.results-wrapper{
         columns: auto 2;
         gap: 10px;
         padding: 10px;
@@ -126,7 +126,7 @@ li{
 }
 
 @media only screen and (max-width: 480px) {
-    .curated-photos-wrapper, .favourites-wrapper,.results-wrapper{
+    .favourites-wrapper,.results-wrapper{
         columns: auto 1;
         gap: 5px;
     }
