Finished photo page

--- a/app/en/photo/[photoID]/photo.module.css
+++ b/app/en/photo/[photoID]/photo.module.css
@@ -1,9 +1,7 @@
 .photo_page_container{
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-around;
     margin: 0 auto;
-    height: clamp(500px, 75vh, auto);
     max-width: 1440px;
 }
 
@@ -17,19 +15,19 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    height: clamp(500px, 70vh, 700px);
+    height: 100%;
 }
 
 .photo_large{
-    padding: 1em 0;
-    position: relative;
-    object-fit: cover;
-    min-height: 300px;
+    object-fit: contain;
+    padding: 1em;
+    min-height: 500px;
+    max-height: 700px;
+    max-width: 100%;
 }
 
 .bottom_functions_container{
     background-color: var(--grey-color);
-    border-radius: var(--border-radius-small);
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
@@ -52,15 +50,6 @@
     text-decoration: none;
 }
 
-.download_button{
-    background-color: var(--highlight-color);
-    border: none;
-    border-radius: var(--border-radius-small);
-    color: white;
-    height: 40px;
-    width: 12em;
-}
-
 .pexels_link{
     color: var(--main-text-color);
     text-decoration: none;
@@ -71,17 +60,22 @@
     color: var(--highlight-color);
 }
 
-@media only screen and (max-width: 896px) {
-    .photo_container{
-        height: 500px;
+.download_button{
+    background-color: var(--highlight-color);
+    border-radius: var(--border-radius-small);
+    border: none;
+    color: white;
+    height: 40px;
+    width: 12em;
+}
+
+@media only screen and (max-width: 1024px){
+    .photo_large{
+        max-height: 500px;
     }
 }
 
 @media only screen and (max-width: 768px) {
-    .photo_page_container{
-        height: auto;
-    }
-
     .bottom_functions_container{
         flex-flow: column nowrap;
         gap: 8px;
@@ -89,21 +83,12 @@
         height: auto;
     }
 
-    .photo_container{
-        height: auto;
-    }
-
     .photo_large{
-        max-width: 500px;
+        min-height: 250px;
     }
 
     .photographer_name_container, .pexels_url_container{
         border-bottom: var(--border-ultra-thin);
         padding: 4px 2.5em;
-    }
-}
-@media only screen and (max-width: 480px) {
-    .photo_large{
-        max-width: 315px;
     }
 }
