--- a/styles/layouts/navbar.css
+++ b/styles/layouts/navbar.css
@@ -27,16 +27,15 @@ nav{
     border-color: white;
 }
 
+.index-photo-text{
+    margin-right: 4px;
+}
+
 .stash-txt{
     color: white;
     background-color: var(--highlight-darker-color);
     border-radius: var(--border-radius-small);
     padding: 0 0.25em;
-}
-
-.heart-icon{
-    height: 20px;
-    width: 20px;
 }
 
 .index-heart-wrapper{
@@ -52,9 +51,14 @@ nav{
     color: var(--red-color);
 }
 
+.heart-icon{
+    height: 20px;
+    width: 20px;
+}
+
 @media only screen and (max-width: 768px) {
     #index-navbar{
-        padding: 0 0.5em;
+        padding: 0 8px;
     }
 
     .company-header-link{
