--- a/styles/components/image-wrapper.css
+++ b/styles/components/image-wrapper.css
@@ -3,30 +3,27 @@
     flex-flow: column nowrap;
     position: relative; 
     margin-bottom: 1em;
-    min-height: 125px;
-}
-
-.custom-image-parent{
-    position: relative;
-    height: 100%; 
+    min-height: 200px;
 }
 
 .custom-image-component{
-    position: relative;
-    opacity: 1;
     z-index: -2;
 }
 
 .image-buttons{
-    cursor: pointer;
     position: absolute;
     top: 0;
-    opacity: 0;
-    z-index: 0;
+    opacity: 1;
 }
 
 .image-buttons:hover{
     opacity: 1;
+}
+
+.layer-space{
+    cursor: pointer;
+    display: block;
+    z-index: -1;
 }
 
 .top-right-buttons{
@@ -41,11 +38,38 @@
     height: 7em;
 }
 
+.bottom-container{
+    background-color: rgba(50, 50, 50, 0.3);
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    padding: 0 1em;
+    height: 4em;
+    width: 100%;
+}
+
+.photographer-name{
+    color: white;
+    margin-left: 8px;
+}
+
+.download-icon-wrapper{
+    margin-left: auto;
+}
+
 .image-icons-wrapper, .heart-icon-wrapper,.profile-icon-wrapper, .download-icon-wrapper{
     background-color: white;
     cursor: pointer;
-    height: 2.5em;
-    width: 2.5em;
+    height: 40px;
+    width: 40px;
+}
+
+.profile-icon-wrapper{
+    background-color: var(--highlight-color);
+    border-radius: var(--border-radius-circle);
+    color: white;
 }
 
 .image-icons-wrapper:hover, .download-icon-wrapper:hover{
@@ -61,43 +85,19 @@
     width: 20px;
 }
 
-.bottom-container{
-    background-color: rgba(50, 50, 50, 0.25);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    padding: 0 1em;
-    height: 4em;
-    width: 100%;
-}
-
-.photographer-name{
-    color: white;
-    margin-left: 0.5em;
-    text-overflow: ellipsis;
-}
-
-.profile-icon-wrapper{
-    background-color: var(--highlight-color);
-    border-radius: var(--border-radius-circle);
-    color: white;
-}
-
-.download-icon-wrapper{
-    margin-left: auto;
-}
-
 @media only screen and (max-width: 1152px) {
     .photo-wrapper{
-        margin-bottom: 0.75em;
+        margin-bottom: 10px;
     }
 
     .top-right-buttons{
-        margin-right: 0.75em;
+        margin-right: 10px;
         height: 6.5em;
+    }
+
+    .bottom-container{
+        padding: 0 10px;
+        height: 3em;
     }
 
     .image-icons-wrapper, .heart-icon-wrapper,.profile-icon-wrapper, .download-icon-wrapper{
@@ -105,22 +105,17 @@
         width: 36px;
     }
 
+    .photographer-name{
+        margin-left: 4px;
+    }
+
     .image-icons{
         height: 18px;
         width: 18px;
     }
-
-    .bottom-container{
-        padding: 0 0.75em;
-        height: 3em;
-    }
-
-    .photographer-name{
-        margin-left: 0.25em;
-    }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 512px) {
     .photographer-name{
         font-size: 14px;
     }
