Updated index background image
Fixed some CSS problems on mobile devices

--- a/components/Containers/core/global-nav-bar.css
+++ b/components/Containers/core/global-nav-bar.css
@@ -19,6 +19,10 @@
     border-color: var(--highlight-color);
 }
 
+.global-photo-text{
+    margin-right: 4px;
+}
+
 .global-searchbox-wrapper{
     flex-grow: 1;
 }
@@ -43,17 +47,18 @@
 
 .short-global-logo{
     border: var(--border-ultra-thin);
-    padding-right: 5px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 14px;
     height: 36px;
-}
-
-.p-letter{
-    padding: 0 5px;
+    width: 48px;
 }
 
 @media only screen and (max-width: 768px) {
     .global-searchbox{
-        margin: 0 2em;
+        margin: 0 32px;
         height: 36px;
         width: 100%;
     }
@@ -66,10 +71,10 @@
 
 @media only screen and (max-width: 480px) {
     #global-navbar{
-        padding: 0 0.5em;
+        padding: 0 8px;
     }
 
     .global-searchbox{
-        margin: 0 8px;
+        margin: 0 4px;
     }
 }
